--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -800,7 +800,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-default-link-active-bg">@navbar-default-link-active-bg</label>
-    <input class="form-control" id="input-@navbar-default-link-active-bg" type="text" value="darken(@navbar-default-bg, 6.5%)" data-var="@navbar-default-link-active-bg"/>
+    <input class="form-control" id="input-@navbar-default-link-active-bg" type="text" value="transparent" data-var="@navbar-default-link-active-bg"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
@@ -842,24 +842,24 @@
 <div class="row">
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-color">@navbar-inverse-color</label>
-    <input class="form-control" id="input-@navbar-inverse-color" type="text" value="lighten(@gray-light, 15%)" data-var="@navbar-inverse-color"/>
+    <input class="form-control" id="input-@navbar-inverse-color" type="text" value="@white-color" data-var="@navbar-inverse-color"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-bg">@navbar-inverse-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-bg" type="text" value="#222" data-var="@navbar-inverse-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-bg" type="text" value="@gray-light" data-var="@navbar-inverse-bg"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-border">@navbar-inverse-border</label>
-    <input class="form-control" id="input-@navbar-inverse-border" type="text" value="darken(@navbar-inverse-bg, 10%)" data-var="@navbar-inverse-border"/>
+    <input class="form-control" id="input-@navbar-inverse-border" type="text" value="@gray" data-var="@navbar-inverse-border"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-link-color">@navbar-inverse-link-color</label>
-    <input class="form-control" id="input-@navbar-inverse-link-color" type="text" value="lighten(@gray-light, 15%)" data-var="@navbar-inverse-link-color"/>
+    <input class="form-control" id="input-@navbar-inverse-link-color" type="text" value="@white-color" data-var="@navbar-inverse-link-color"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-link-hover-color">@navbar-inverse-link-hover-color</label>
-    <input class="form-control" id="input-@navbar-inverse-link-hover-color" type="text" value="#fff" data-var="@navbar-inverse-link-hover-color"/>
+    <input class="form-control" id="input-@navbar-inverse-link-hover-color" type="text" value="#e2e2e2" data-var="@navbar-inverse-link-hover-color"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-link-hover-bg">@navbar-inverse-link-hover-bg</label>
@@ -872,7 +872,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-link-active-bg">@navbar-inverse-link-active-bg</label>
-    <input class="form-control" id="input-@navbar-inverse-link-active-bg" type="text" value="darken(@navbar-inverse-bg, 10%)" data-var="@navbar-inverse-link-active-bg"/>
+    <input class="form-control" id="input-@navbar-inverse-link-active-bg" type="text" value="transparent" data-var="@navbar-inverse-link-active-bg"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@navbar-inverse-link-disabled-color">@navbar-inverse-link-disabled-color</label>
