--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,6 +10,7 @@
     <!-- Docs master nav -->
     {% include nav/main.html %}
 
+    <main>
     <!-- Docs page layout -->
     <div class="bs-docs-header" id="content" tabindex="-1">
       <div class="container">
@@ -57,7 +58,7 @@
         {% endunless %}
       </div>
     </div>
-
+</main>
     {% include footer.html %}
   </body>
 </html>
