--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -68,7 +68,7 @@ h4 code {
 .bs-docs-booticon {
   display: block;
   font-weight: 500;
-  color: #fff;
+  color: #252525;
   text-align: center;
   cursor: default;
   border-radius: 2px;
