--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -104,12 +104,16 @@
 
 {% if site.github %}
   <script src="../dist/js/bootstrap.min.js"></script>
+{% elsif page.slug == 'examples' %}
+  <script src="../../dist/js/bootstrap.min.js"></script>
 {% else %}
   <script src="../dist/js/bootstrap.js"></script>
 {% endif %}
 
 {% if site.github %}
   <script src="../assets/js/docs.min.js"></script>
+{% elsif page.slug == 'examples' %}
+  <script src="../../assets/js/customize.min.js"></script>
 {% else %}
   {% for file in site.data.configBridge.paths.docsJs %}
   <script src="{{ file }}"></script>
@@ -128,4 +132,8 @@
 {% endif %}
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+{% if page.slug == 'examples' %}
+<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+{% else %}
 <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+{% endif %}
