--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -15,6 +15,8 @@
 <!-- Bootstrap core CSS -->
 {% if site.github %}
 <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+{% elsif page.slug == 'examples' %}
+<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 {% else %}
 <link href="../dist/css/bootstrap.css" rel="stylesheet">
 {% endif %}
@@ -30,13 +32,20 @@
 <!-- Documentation extras -->
 {% if site.github %}
 <link href="../assets/css/docs.min.css" rel="stylesheet">
+{% elsif page.slug == 'examples' %}
+<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+<link href="../../assets/css/src/pygments-manni.css" rel="stylesheet">
 {% else %}
 <link href="../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 <link href="../assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="../assets/css/src/docs.css" rel="stylesheet">
 {% endif %}
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+{% if page.slug == 'examples' %}
+<script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+{% else %}
 <script src="../assets/js/ie-emulation-modes-warning.js"></script>
+{% endif %}
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
@@ -45,5 +54,10 @@
 <![endif]-->
 
 <!-- Favicons -->
+{% if page.slug == 'examples' %}
+<link rel="apple-touch-icon" href="../../apple-touch-icon.png">
+<link rel="icon" href="../../favicon.ico">
+{% else %}
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="icon" href="/favicon.ico">
+{% endif %}
