--- a/docs/_includes/nav/customize.html
+++ b/docs/_includes/nav/customize.html
@@ -21,6 +21,8 @@
     <li><a href="#navs">Navs</a></li>
     <li><a href="#tabs">Tabs</a></li>
     <li><a href="#pills">Pills</a></li>
+    <li><a href="#ku-branding-box-and-logo-height">KU branding box and logo height</a></li>
+    <li><a href="#ku-left-menu">KU left menu</a></li>
     <li><a href="#pagination">Pagination</a></li>
     <li><a href="#pager">Pager</a></li>
     <li><a href="#jumbotron">Jumbotron</a></li>
