--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -21,7 +21,6 @@
 @import "tables.less";
 @import "forms.less";
 @import "buttons.less";
-@import "footer.less";
 
 // Components
 @import "component-animations.less";
@@ -55,3 +54,8 @@
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
+
+// KU specific
+@import "ku-branding.less";
+@import "ku-leftmenu.less";
+@import "ku-footer.less";
