--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -66,6 +66,7 @@
     display: block;
     padding: 3px 20px;
     clear: both;
+    font-size: 1.085em;
     font-weight: normal;
     line-height: @line-height-base;
     color: @dropdown-link-color;
