--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -16,6 +16,11 @@
        url('@{icon-font-path}@{custom-icon-font-name}.woff') format('woff'),
        url('@{icon-font-path}@{custom-icon-font-name}.ttf') format('truetype'),
        url('@{icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}') format('svg');
+   font-style: normal;
+   font-weight: normal;
+   line-height: 1;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
 }
 
 // Import the fonts
