--- a/less/grid.less
+++ b/less/grid.less
@@ -33,6 +33,11 @@ main {
   }
 }
 
+.main-content {
+    padding-top: @grid-gutter-width;
+    padding-bottom: @grid-gutter-width;
+}
+
 // Make columns equal height
 @media (min-width: @screen-md-min) {
     .row-eq-height {
