--- a/less/navs.less
+++ b/less/navs.less
@@ -1,38 +1,31 @@
 //
 // Navs
 // --------------------------------------------------
-
-
 // Base class
 // --------------------------------------------------
-
 .nav {
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
   list-style: none;
   &:extend(.clearfix all);
-
   > li {
     position: relative;
     display: block;
-
     > a {
       position: relative;
       display: block;
       padding: @nav-link-padding;
-      &:hover,
-      &:focus {
+      &:focus,
+      &:hover {
         text-decoration: none;
-        background-color: @nav-link-hover-bg;
+        //background-color: @nav-link-hover-bg;
       }
     }
-
     // Disabled state sets text to gray and nukes hover/tab effects
     &.disabled > a {
       color: @nav-disabled-link-color;
-
-      &:hover,
-      &:focus {
+      &:focus,
+      &:hover {
         color: @nav-disabled-link-hover-color;
         text-decoration: none;
         background-color: transparent;
@@ -40,17 +33,15 @@
       }
     }
   }
-
   // Open dropdowns
   .open > a {
     &,
-    &:hover,
-    &:focus {
+    &:focus,
+    &:hover {
       background-color: @nav-link-hover-bg;
       border-color: @link-color;
     }
   }
-
   // Nav dividers (deprecated with v3.0.1)
   //
   // This should have been removed in v3 with the dropping of `.nav-list`, but
@@ -59,7 +50,6 @@
   .nav-divider {
     .nav-divider();
   }
-
   // Prevent IE8 from misplacing imgs
   //
   // See https://github.com/h5bp/html5-boilerplate/issues/984#issuecomment-3985989
@@ -69,27 +59,27 @@
 }
 //KU menu item pipes
 @media (min-width: @screen-sm-min) {
-    .ku-nav {
-        ul.nav {
-            > li + li {
-                &:before {
-                    content: " ";
-                    display: block;
-                    position: absolute;
-                    top: 30%;
-                    left: 0;
-                	height: 40%;
-                    width: 1px;
-                    background: #cfcfcf;
-                }
-            }
+  .ku-nav {
+    ul.nav {
+      > li {
+        + li {
+          &:before {
+            content: " ";
+            display: block;
+            position: absolute;
+            top: 30%;
+            left: 0;
+            height: 40%;
+            width: 1px;
+            background: #cfcfcf;
+          }
         }
+      }
     }
+  }
 }
-
 // Tabs
 // -------------------------
-
 // Give the tabs something to sit on
 .nav-tabs {
   border-bottom: 1px solid @nav-tabs-border-color;
@@ -97,7 +87,6 @@
     float: left;
     // Make the list-items overlay the bottom border
     margin-bottom: -1px;
-
     // Actual tabs (as links)
     > a {
       margin-right: 2px;
@@ -108,12 +97,11 @@
         border-color: @nav-tabs-link-hover-border-color @nav-tabs-link-hover-border-color @nav-tabs-border-color;
       }
     }
-
     // Active state, and its :hover to override normal :hover
     &.active > a {
       &,
-      &:hover,
-      &:focus {
+      &:focus,
+      &:hover {
         color: @nav-tabs-active-link-hover-color;
         background-color: @nav-tabs-active-link-hover-bg;
         border: 1px solid @nav-tabs-active-link-hover-border-color;
@@ -128,14 +116,11 @@
     .nav-tabs-justified();
   }
 }
-
-
 // Pills
 // -------------------------
 .nav-pills {
   > li {
     float: left;
-
     // Links rendered as pills
     > a {
       border-radius: @nav-pills-border-radius;
@@ -143,20 +128,17 @@
     + li {
       margin-left: 2px;
     }
-
     // Active state
     &.active > a {
       &,
-      &:hover,
-      &:focus {
+      &:focus,
+      &:hover {
         color: @nav-pills-active-link-hover-color;
         background-color: @nav-pills-active-link-hover-bg;
       }
     }
   }
 }
-
-
 // Stacked pills
 .nav-stacked {
   > li {
@@ -167,17 +149,12 @@
     }
   }
 }
-
-
 // Nav variations
 // --------------------------------------------------
-
 // Justified nav links
 // -------------------------
-
 .nav-justified {
   width: 100%;
-
   > li {
     float: none;
     > a {
@@ -185,12 +162,10 @@
       margin-bottom: 5px;
     }
   }
-
   > .dropdown .dropdown-menu {
     top: auto;
     left: auto;
   }
-
   @media (min-width: @screen-sm-min) {
     > li {
       display: table-cell;
@@ -201,42 +176,35 @@
     }
   }
 }
-
 // Move borders to anchors instead of bottom of list
 //
 // Mixin for adding on top the shared `.nav-justified` styles for our tabs
 .nav-tabs-justified {
   border-bottom: 0;
-
   > li > a {
     // Override margin from .nav-tabs
     margin-right: 0;
     border-radius: @border-radius-base;
   }
-
-  > .active > a,
-  > .active > a:hover,
-  > .active > a:focus {
+   > .active > a:focus,
+   > .active > a:hover,
+  > .active > a {
     border: 1px solid @nav-tabs-justified-link-border-color;
   }
-
   @media (min-width: @screen-sm-min) {
     > li > a {
       border-bottom: 1px solid @nav-tabs-justified-link-border-color;
       border-radius: @border-radius-base @border-radius-base 0 0;
     }
-    > .active > a,
-    > .active > a:hover,
-    > .active > a:focus {
+     > .active > a:focus,
+     > .active > a:hover,
+    > .active > a {
       border-bottom-color: @nav-tabs-justified-active-link-border-color;
     }
   }
 }
-
-
 // Tabbable tabs
 // -------------------------
-
 // Hide tabbable panes to start, show them when `.active`
 .tab-content {
   > .tab-pane {
@@ -246,11 +214,8 @@
     display: block;
   }
 }
-
-
 // Dropdowns
 // -------------------------
-
 // Specific dropdowns
 .nav-tabs .dropdown-menu {
   // make dropdown border overlap tab border
