--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -229,9 +229,18 @@
 <p>Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).</p>
 <div class="row">
   <div class="col-xs-4">
+    <label for="input-@padding20">@padding20</label>
+    <input class="form-control" id="input-@padding20" type="text" value="20px" data-var="@padding20"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@margin20">@margin20</label>
+    <input class="form-control" id="input-@margin20" type="text" value="20px" data-var="@margin20"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@padding-base-vertical">@padding-base-vertical</label>
     <input class="form-control" id="input-@padding-base-vertical" type="text" value="6px" data-var="@padding-base-vertical"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-base-horizontal">@padding-base-horizontal</label>
     <input class="form-control" id="input-@padding-base-horizontal" type="text" value="12px" data-var="@padding-base-horizontal"/>
@@ -240,11 +249,11 @@
     <label for="input-@padding-large-vertical">@padding-large-vertical</label>
     <input class="form-control" id="input-@padding-large-vertical" type="text" value="20px" data-var="@padding-large-vertical"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-large-horizontal">@padding-large-horizontal</label>
     <input class="form-control" id="input-@padding-large-horizontal" type="text" value="20px" data-var="@padding-large-horizontal"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-small-vertical">@padding-small-vertical</label>
     <input class="form-control" id="input-@padding-small-vertical" type="text" value="10px" data-var="@padding-small-vertical"/>
@@ -253,11 +262,11 @@
     <label for="input-@padding-small-horizontal">@padding-small-horizontal</label>
     <input class="form-control" id="input-@padding-small-horizontal" type="text" value="10px" data-var="@padding-small-horizontal"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-xs-vertical">@padding-xs-vertical</label>
     <input class="form-control" id="input-@padding-xs-vertical" type="text" value="1px" data-var="@padding-xs-vertical"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-xs-horizontal">@padding-xs-horizontal</label>
     <input class="form-control" id="input-@padding-xs-horizontal" type="text" value="5px" data-var="@padding-xs-horizontal"/>
@@ -266,11 +275,11 @@
     <label for="input-@line-height-large">@line-height-large</label>
     <input class="form-control" id="input-@line-height-large" type="text" value="1.3333333" data-var="@line-height-large"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@line-height-small">@line-height-small</label>
     <input class="form-control" id="input-@line-height-small" type="text" value="1.5" data-var="@line-height-small"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@border-radius-base">@border-radius-base</label>
     <input class="form-control" id="input-@border-radius-base" type="text" value="4px" data-var="@border-radius-base"/>
@@ -279,11 +288,11 @@
     <label for="input-@border-radius-large">@border-radius-large</label>
     <input class="form-control" id="input-@border-radius-large" type="text" value="6px" data-var="@border-radius-large"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@border-radius-small">@border-radius-small</label>
     <input class="form-control" id="input-@border-radius-small" type="text" value="3px" data-var="@border-radius-small"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@component-active-color">@component-active-color</label>
     <input class="form-control" id="input-@component-active-color" type="text" aria-describedby="help-block-@component-active-color" value="#fff" data-var="@component-active-color"/>
@@ -294,12 +303,12 @@
     <input class="form-control" id="input-@component-active-bg" type="text" aria-describedby="help-block-@component-active-bg" value="@brand-primary" data-var="@component-active-bg"/>
     <p class="help-block" id="help-block-@component-active-bg">Global background color for active items (e.g., navs or dropdowns).</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@caret-width-base">@caret-width-base</label>
     <input class="form-control" id="input-@caret-width-base" type="text" aria-describedby="help-block-@caret-width-base" value="4px" data-var="@caret-width-base"/>
     <p class="help-block" id="help-block-@caret-width-base">Width of the <code>border</code> for generating carets that indicate dropdowns.</p>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@caret-width-large">@caret-width-large</label>
     <input class="form-control" id="input-@caret-width-large" type="text" aria-describedby="help-block-@caret-width-large" value="5px" data-var="@caret-width-large"/>
