--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -9,7 +9,7 @@
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
       <a class="thumbnail" href="../examples/ku-theme/">
-        <img src="../examples/screenshots/grid.jpg" alt="Multiple grids example">
+        <img src="../examples/screenshots/ku_standard.png" alt="KU template with left menu">
       </a>
       <h3>KU standard template</h3>
       <p>Template with left menu.</p>
