--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -1,6 +1,9 @@
 <header>
   <div class="navbar-inverse navbar-static-top ku-topbar" role="navigation">
     <div class="container">
+      <!-- <a class="topbar-logo pull-left" href="/">
+          <img class="img-responsive" src="../../images/ku_topbar_dk.svg" alt="Københavns universitet">
+      </a> -->
       <div id="topbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Kalender</a></li>
