--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -37,16 +37,16 @@ h4 code {
 
 /* Outline button for use within the docs */
 .btn-outline {
-  color: #563d7c;
+  color: #901a1e;
   background-color: transparent;
-  border-color: #563d7c;
+  border-color: #901a1e;
 }
 .btn-outline:hover,
 .btn-outline:focus,
 .btn-outline:active {
   color: #fff;
-  background-color: #563d7c;
-  border-color: #563d7c;
+  background-color: #901a1e;
+  border-color: #901a1e;
 }
 
 /* Inverted outline button (white on dark) */
@@ -58,7 +58,7 @@ h4 code {
 .btn-outline-inverse:hover,
 .btn-outline-inverse:focus,
 .btn-outline-inverse:active {
-  color: #563d7c;
+  color: #901a1e;
   text-shadow: none;
   background-color: #fff;
   border-color: #fff;
@@ -83,7 +83,7 @@ h4 code {
   font-size: 28px;
 }
 .bs-docs-booticon-inverse {
-  color: #563d7c;
+  color: #901a1e;
   background-color: #fff;
 }
 .bs-docs-booticon-outline {
@@ -134,7 +134,7 @@ h4 code {
 .bs-docs-nav .navbar-brand,
 .bs-docs-nav .navbar-nav > li > a {
   font-weight: 500;
-  color: #563d7c;
+  color: #252525;
 }
 .bs-docs-nav .navbar-nav > li > a:hover,
 .bs-docs-nav .navbar-nav > .active > a,
@@ -143,7 +143,7 @@ h4 code {
   background-color: #f9f9f9;
 }
 .bs-docs-nav .navbar-toggle .icon-bar {
-  background-color: #563d7c;
+  background-color: #252525;
 }
 .bs-docs-nav .navbar-header .navbar-toggle {
   border-color: #fff;
@@ -544,19 +544,19 @@ h4 code {
 .bs-docs-sidebar .nav > li > a:hover,
 .bs-docs-sidebar .nav > li > a:focus {
   padding-left: 19px;
-  color: #563d7c;
+  color: #901a1e;
   text-decoration: none;
   background-color: transparent;
-  border-left: 1px solid #563d7c;
+  border-left: 1px solid #901a1e;
 }
 .bs-docs-sidebar .nav > .active > a,
 .bs-docs-sidebar .nav > .active:hover > a,
 .bs-docs-sidebar .nav > .active:focus > a {
   padding-left: 18px;
   font-weight: bold;
-  color: #563d7c;
+  color: #901a1e;
   background-color: transparent;
-  border-left: 2px solid #563d7c;
+  border-left: 2px solid #901a1e;
 }
 
 /* Nav: second level (shown on .active) */
@@ -595,7 +595,7 @@ h4 code {
 }
 .back-to-top:hover,
 .bs-docs-theme-toggle:hover {
-  color: #563d7c;
+  color: #901a1e;
   text-decoration: none;
 }
 .bs-docs-theme-toggle {
@@ -772,7 +772,7 @@ h1[id] {
 
 /* Docs colors */
 .color-swatches .bs-purple {
-  background-color: #563d7c;
+  background-color: #901a1e;
 }
 .color-swatches .bs-purple-light {
   background-color: #c7bfd3;
@@ -1307,7 +1307,7 @@ h1[id] {
 }
 .bs-glyphicons li:hover {
   color: #fff;
-  background-color: #563d7c;
+  background-color: #901a1e;
 }
 
 @media (min-width: 768px) {
@@ -1451,7 +1451,7 @@ h1[id] {
   width: 100%;
   margin-bottom: 15px;
   overflow: hidden;
-  color: #563d7c;
+  color: #901a1e;
   background-color: #f9f9f9;
   border-radius: 4px;
 }
@@ -1466,7 +1466,7 @@ h1[id] {
 }
 .bs-brand-logos .inverse {
   color: #fff;
-  background-color: #563d7c;
+  background-color: #901a1e;
 }
 
 /* Heading content within */
@@ -1535,8 +1535,8 @@ h1[id] {
 }
 .btn-clipboard-hover {
   color: #fff;
-  background-color: #563d7c;
-  border-color: #563d7c;
+  background-color: #901a1e;
+  border-color: #901a1e;
 }
 
 @media (min-width: 768px) {
