--- a/less/variables.less
+++ b/less/variables.less
@@ -108,6 +108,8 @@
 //== Components
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
+@padding20: 20px;
+@margin20: 20px;
 
 @padding-base-vertical:     6px;
 @padding-base-horizontal:   12px;
@@ -380,7 +382,7 @@
 //##
 
 // Basics of a navbar
-@ku-topbar-height:                    25px;
+@ku-topbar-height:                 25px;
 @navbar-height:                    40px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
