--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -38,6 +38,32 @@
     <input class="form-control" id="input-@ku-red" type="text" value="#901a1e" data-var="@ku-red"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@hum">@hum</label>
+    <input class="form-control" id="input-@hum" type="text" value="#365aa5" data-var="@hum"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@science">@science</label>
+    <input class="form-control" id="input-@science" type="text" value="#46743c" data-var="@science"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@sund">@sund</label>
+    <input class="form-control" id="input-@sund" type="text" value="#2a216a" data-var="@sund"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@samf">@samf</label>
+    <input class="form-control" id="input-@samf" type="text" value="#e13718" data-var="@samf"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@jura">@jura</label>
+    <input class="form-control" id="input-@jura" type="text" value="#999632" data-var="@jura"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@teol">@teol</label>
+    <input class="form-control" id="input-@teol" type="text" value="#66609e" data-var="@teol"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@brand-primary">@brand-primary</label>
     <input class="form-control" id="input-@brand-primary" type="text" value="darken(#428bca, 6.5%)" data-var="@brand-primary"/>
   </div>
@@ -934,7 +960,7 @@
 <div class="row">
   <div class="col-xs-4">
     <label for="input-@nav-link-padding">@nav-link-padding</label>
-    <input class="form-control" id="input-@nav-link-padding" type="text" value="10px 15px" data-var="@nav-link-padding"/>
+    <input class="form-control" id="input-@nav-link-padding" type="text" value="10px 10px" data-var="@nav-link-padding"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@nav-link-hover-bg">@nav-link-hover-bg</label>
