--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -27,6 +27,9 @@
   </ul>
 </li>
 <li>
+  <a href="#ku-faculty-colors">KU faculty styling</a>
+</li>
+<li>
   <a href="#type">Typography</a>
   <ul class="nav">
     <li><a href="#type-headings">Headings</a></li>
