--- a/less/navs.less
+++ b/less/navs.less
@@ -74,6 +74,11 @@
             background: #cfcfcf;
           }
         }
+        &:first-child {
+          > a {
+            padding-left: 0;
+          }
+        }
       }
     }
   }
@@ -186,9 +191,9 @@
     margin-right: 0;
     border-radius: @border-radius-base;
   }
-   > .active > a:focus,
+   > .active > a,
    > .active > a:hover,
-  > .active > a {
+  > .active > a:focus {
     border: 1px solid @nav-tabs-justified-link-border-color;
   }
   @media (min-width: @screen-sm-min) {
@@ -196,9 +201,9 @@
       border-bottom: 1px solid @nav-tabs-justified-link-border-color;
       border-radius: @border-radius-base @border-radius-base 0 0;
     }
-     > .active > a:focus,
+     > .active > a,
      > .active > a:hover,
-    > .active > a {
+    > .active > a:focus {
       border-bottom-color: @nav-tabs-justified-active-link-border-color;
     }
   }
