--- a/less/variables.less
+++ b/less/variables.less
@@ -16,7 +16,15 @@
 
 @white-color:             #fff;
 
+// KU specific colors
+ 
 @ku-red:                #901a1e;
+@hum:                   #365aa5;
+@science:               #46743c;
+@sund:                  #2a216a;
+@samf:                  #e13718;
+@jura:                  #999632;
+@teol:                  #66609e;
 
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
@@ -445,7 +453,7 @@
 //##
 
 //=== Shared nav styles
-@nav-link-padding:                          10px 15px;
+@nav-link-padding:                          10px 10px;
 @nav-link-hover-bg:                         @gray-lighter;
 
 @nav-disabled-link-color:                   @gray-light;
