--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -28,6 +28,24 @@
   }
   .ku-branding-line {
     border-bottom: 1px solid @ku-red;
+    .theme-samf & {
+      border-bottom: 1px solid @samf;
+    }
+    .theme-hum & {
+      border-bottom: 1px solid @hum;
+    }
+    .theme-science & {
+      border-bottom: 1px solid @science;
+    }
+    .theme-sund & {
+      border-bottom: 1px solid @sund;
+    }
+    .theme-jura & {
+      border-bottom: 1px solid @jura;
+    }
+    .theme-teol & {
+      border-bottom: 1px solid @teol;
+    }
   }
 }
 /*Special hack to scale .svg images in IE*/
